# hello-arch-api

./: Dockerfile  pyproject.toml
app/: main.py
hello_arch_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_api.py
