[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-arch-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "aiokafka>=0.10",
  "redis>=5.0",
  "prometheus-client>=0.20",
  "prometheus-fastapi-instrumentator>=6.1.0",
  "httpx>=0.27",
  # if you finished Step 2, keep the next line; otherwise comment it out
  "arch-logging @ git+https://github.com/zarate-s/hello-arch-logging.git"
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "anyio>=4.4",
  "httpx>=0.28",
  "asgi-lifespan>=2.1.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]